--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
          <h4> Engineering, Economics and Education (Volume-1)</h4> </div> 
    
-        <img src="D://Programming/Intern/pre_intern01/Images/logo1.jpg" class="logo1">
+        <img src="logo1.jpg" class="logo1">
          <img src="D:/Programming/Intern/pre_intern01/Images/journal_logo.png" class="logo2">
     </div>
     <div class="navbar ul">
