--- a/assignment1.html
+++ b/assignment1.html
@@ -238,8 +238,8 @@
 
          <h4> Engineering, Economics and Education (Volume-1)</h4> </div> 
    
-        <img src="D://Programming/Intern/pre_intern01/Images/logo1.jpg" class="logo1">
-         <img src="D:/Programming/Intern/pre_intern01/Images/journal_logo.png" class="logo2">
+        <img src="logo1.jpg" class="logo1">
+         <img src="journal_logo.png" class="logo2">
     </div>   
    
     <div class="navbar ul">
@@ -252,7 +252,7 @@
             <li>Contact Us</li>
         </ul>
     </div>
-    <img src="D:/Programming/Intern/pre_intern01/Images/park.jpg" class="slide_image">
+    <img src="park.jpg" class="slide_image">
     <div class="mainbody">
         
            
