--- a/lists.html
+++ b/lists.html
@@ -9,7 +9,9 @@
         <h3>This is heading3</h3>
         <h4>This is heading4</h4>
         <h5>This is heading5</h5>
-        <h6>This is heading6</h6>
+        <h6>This is heading6
+            
+        </h6>
 
 
         <h1>This is unordered liss</h1>
