--- a/testbranch1.html
+++ b/testbranch1.html
@@ -4,5 +4,7 @@
     <body>
         <h4>Master Branch</h4>
         This is master branch.
+        <h4>Feature 2</h4>
+        This is second feature.
     </body>
 </hm>
