--- a/testbranch1.html
+++ b/testbranch1.html
@@ -8,5 +8,7 @@
         This is new feature
         <h4>Feature 2</h4>
         This is second feature.
+        <h4>Remote Version</h4>
+        Fetch and merge with origin.
     </body>
 </hm>
