--- a/YTUassignment.html
+++ b/YTUassignment.html
@@ -529,7 +529,7 @@
                     <p class="txt1">Ministry of Education Yangon Technological University The Seventh International<br> Conference on Science and Engineering 2016 Opening Ceremony
 
 
-
+                        
                         
                     </p>
                 </span>
@@ -564,7 +564,7 @@
                 </div>
                 <div class="rector">
                     <div class="rectorimg">
-                        <img src="D:/Programming/Intern/pre_intern01/YTU_Rector.jpg" width="300px" height="250px">
+                        <img src="YTU_Rector.jpg" width="300px" height="250px">
                     </div>
                     <div class="rectormsg">
                         <h1 style="color:rgb(214, 70, 9)">Rector’s Messages</h1>
